# agentic-ui-generator

./: .gitignore  README.md  package-lock.json  package.json
backend/: .coverage  .env.example  .env.sample  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/api/: assets.py  generate.py  logs.py  projects.py  templates.py  tokens.py
backend/app/models/: __init__.py  asset.py  design_token.py  project.py  widget_template.py
backend/app/schemas/: asset.py  design_token.py  project.py  widget_template.py
backend/app/services/: llm.py
backend/tests/: test_api_assets.py  test_api_generate.py  test_api_projects.py  test_api_templates.py  test_api_tokens.py  test_database.py  test_health.py  test_llm_service.py  test_models.py
docs/plans/: 2026-03-09-agui-design.md  2026-03-09-agui-implementation.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/e2e/: assets.spec.ts  editor.spec.ts  preview.spec.ts
frontend/src/: App.tsx  index.css
frontend/src/__tests__/: App.test.tsx
frontend/src/hooks/: use-sse-generate.ts
frontend/src/lib/: api.ts  code-generator.ts  types.ts
frontend/src/pages/: AssetsPage.tsx  EditorPage.tsx  HomePage.tsx  PreviewPage.tsx  ProjectListPage.tsx
frontend/src/stores/: asset-store.ts  chat-store.ts  editor-store.ts
shared/schemas/: a2ui-extended.schema.json
slack-bot/: .coverage  .env.example  pyproject.toml
slack-bot/bot/: client.py  config.py  handlers.py  main.py
slack-bot/tests/: test_client.py  test_config.py  test_handlers.py
(+59 files in other folders)
